Bug 57482 Unfolding mail groups for flag combobox; Big refactoring of fucking TT code; TRUE combobox, at last (included very BIG hack for IE6 O_OOOO respect http://anton-egorov.blogspot.com/2007/11/ie-select-z-index.html)
git-svn-id: svn://svn.office.custis.ru/3rdparty/bugzilla.org/trunk@549 6955db30-a419-402b-8a0d-67ecbb4d7f56

--- a/skins/standard/global.css
+++ b/skins/standard/global.css
@@ -540,3 +540,13 @@ table.flag_table select { max-width: 400px; }
 .importxls_link span { font-weight: bold; }
 
 #comment_status_commit #comment { width: 50em; font-size: medium; font-family: monospace; }
+
+.selectfree_ie iframe {
+display:none;
+display/**/:block;
+position:absolute;
+top:0;
+left:0;
+z-index:-1;
+filter:mask();
+}
